proj1/testing/error/notInAlphabeterr.inp
* B BETA I II III RX$E